Header menu: Fix the alignment of the dropdown arrows.

--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -158,12 +158,12 @@
 		& .wp-block-navigation-submenu__toggle {
 
 			@media (--tablet) {
+				margin: 0;
 				padding-left: calc(var(--wp--style--block-gap) / 6);
 				padding-right: calc(var(--wp--style--block-gap) / 2);
-				height: auto;
-				width: auto;
-				margin: 0;
-				line-height: inherit;
+				height: 24px;
+				width: 12px;
+				box-sizing: content-box;
 			}
 		}
 
